building seq running configs